# LPSCoin

./: .gitattributes  .travis.yml  CONTRIBUTING.md  COPYING  INSTALL  Makefile.am  README.md  autogen.sh  configure.ac  pkg.m4
.github/workflows/: cmake-single-platform.yml
build-aux/m4/: ax_boost_base.m4  ax_boost_chrono.m4  ax_boost_filesystem.m4  ax_boost_program_options.m4  ax_boost_system.m4  ax_boost_thread.m4  ax_check_compile_flag.m4  ax_check_link_flag.m4  ax_check_preproc_flag.m4  ax_cxx_compile_stdcxx.m4  ax_gcc_func_attribute.m4  ax_pthread.m4  bitcoin_find_bdb48.m4  bitcoin_qt.m4  bitcoin_subdir_to_include.m4
contrib/: gitian-build.sh  qt_translations.py  thered-qt.pro  theredd.bash-completion
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  changelog  control  copyright  gbp.conf  rules  thered-qt.desktop  thered-qt.install  thered-qt.lintian-overrides  thered-qt.protocol  theredd.bash-completion  theredd.examples  theredd.install  theredd.lintian-overrides  theredd.manpages  watch
contrib/debian/examples/: thered.conf
contrib/debian/manpages/: thered-qt.1  thered.conf.5  theredd.1
contrib/debian/patches/: README  series
contrib/devtools/: README.md  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-rpi2.yml  gitian-win-signer.yml  gitian-win.yml
contrib/init/: README.md  theredd.conf  theredd.init  theredd.openrc  theredd.openrcconf  theredd.service
contrib/macdeploy/: README.md  custom_dsstore.py  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  spendfrom.py
depends/: .gitignore  Makefile  README.md  config.guess  config.site.in
depends/builders/: darwin.mk  default.mk  linux.mk
depends/hosts/: darwin.mk  default.mk  linux.mk  mingw32.mk
doc/: Doxyfile  README.md  README_osx.md  README_windows.txt  REST-interface.md  build-osx.md  build-unix.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  guide-startmany.md  init.md  masternode-budget.md  masternode_conf.md  multiwallet-qt.md  release-notes.md  release-process.md  swifttx.md  tor.md  translation_process.md  unit-tests.md  windows_masternode_guide.txt  zmq.md
doc/release-notes/: release-notes-2.1.5.md  release-notes-2.2.1.md
qa/pull-tester/: run-bitcoind-for-test.sh.in  tests-config.sh.in
qa/rpc-tests/: util.py  util.sh
share/: setup.nsi.in
share/qt/: Info.plist.in  extract_strings_qt.py
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  activemasternode.cpp  base58.h  chainparams.cpp  chainparams.h  chainparamsbase.h  checkpoints.cpp  clientversion.cpp  clientversion.h  coins.h  compat.h  diamondcoind-res.rc  diamondcoind.cpp  gracecoin-cli.cpp  gracecoin-tx.cpp  hash.h  init.cpp  kernel.cpp  lpscoins-cli-res.rc  main.cpp  main.h  masternode-budget.cpp  masternode-budget.h  masternode-payments.cpp  masternode-sync.cpp  masternode-sync.h  masternode.cpp  masternode.h  masternodeconfig.h  masternodeman.cpp  masternodeman.h  miner.cpp  net.cpp  netbase.cpp  netbase.h  noui.cpp  obfuscation-relay.h  (+29 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  strnlen.cpp
src/primitives/: transaction.cpp
src/qt/: addressbookpage.cpp  addresstablemodel.cpp  askpassphrasedialog.cpp  bip38tooldialog.cpp  bitcoinaddressvalidator.cpp  bitcoingui.cpp  bitcoingui.h  bitcoinunits.cpp  bitcoinunits.h  blockexplorer.cpp  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  diamondcoin.cpp  diamondcoin.qrc  diamondcoin_locale.qrc  editaddressdialog.cpp  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  lpscoinsstrings.cpp  macnotificationhandler.mm  notificator.h  obfuscationconfig.cpp  openuridialog.cpp  optionsdialog.cpp  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  paymentserver.cpp  paymentserver.h  receiverequestdialog.cpp  recentrequeststablemodel.h  rpcconsole.cpp  rpcconsole.h  sendcoinsdialog.cpp  sendcoinsentry.cpp  signverifymessagedialog.cpp  splashscreen.cpp  (+4 more)
src/qt/forms/: addressbookpage.ui  bip38tooldialog.ui  helpmessagedialog.ui  intro.ui  multisenddialog.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  tradingdialog.ui
src/qt/locale/: diamondcoin_ca.ts  diamondcoin_en.ts  diamondcoin_en_US.ts  diamondcoin_fi.ts  diamondcoin_fr_FR.ts  diamondcoin_ko_KR.ts  diamondcoin_pl.ts  diamondcoin_pt.ts  diamondcoin_pt_BR.ts  diamondcoin_ru.ts  diamondcoin_sk.ts  diamondcoin_sv.ts  gracecoin_da.ts  gracecoin_de.ts  gracecoin_es.ts  gracecoin_nl.ts  gracecoin_ro_RO.ts  gracecoin_zh_TW.ts  lpscoins_bg.ts  lpscoins_cs.ts  lpscoins_it.ts  lpscoins_ja.ts  lpscoins_uk.ts  lpscoins_zh_CN.ts
src/qt/res/: gracecoin-qt-res.rc
src/qt/res/css/: default.css
src/qt/res/icons/: bitcoin.icns
src/qt/test/: test_main.cpp  uritests.cpp
src/script/: bitcoinconsensus.h
src/test/: README.md  main_tests.cpp  netbase_tests.cpp  test_gracecoin.cpp
src/test/data/: bitcoin-util-test.json
src/zmq/: zmqconfig.h
